[gd_scene load_steps=4 format=3 uid="uid://m28twc821w1w"]

[ext_resource type="Script" uid="uid://cbe3jui8pa2dd" path="res://Scrips/maps/main.gd" id="1_0wfyh"]
[ext_resource type="FontFile" uid="uid://dyw18lmwefujw" path="res://Assets/Fonts/comic-sans-ms.ttf" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://bck3osppcg46c" path="res://Assets/Backgrounds/Recordar/Final_recordar_03.png" id="3_x0ytm"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Tittle" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 347.0
theme_override_colors/font_color = Color(0.457125, 0.659166, 0.435588, 1)
theme_override_fonts/font = ExtResource("2_sugp2")
theme_override_font_sizes/font_size = 100
text = "Final de camino"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Nueva partida" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Jugar
"

[node name="Cargar" type="Button" parent="CenterContainer/MainButtons"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Cargar
"

[node name="Ayuda" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Ayuda"

[node name="Salir" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Salir
"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(963.5, 534.5)
scale = Vector2(1.00678, 1.00833)
texture = ExtResource("3_x0ytm")

[connection signal="pressed" from="CenterContainer/MainButtons/Nueva partida" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Cargar" to="." method="_on_cargar_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Ayuda" to="." method="_on_ayuda_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Salir" to="." method="_on_salir_pressed"]
